
*  Formalize the basic connection between the singular matrix
A - lambda I and an eigenvalue lambda with new Theorem ESM.
Shortens proofs of Theorem ESM and Theorem EMRCP.

*  Move Theorem MNEM earlier, with a new proof that does not
use the characteristic polynomial.

*  Minor adjustment and enhancement of the phrasing of the
definition of similar matrices.


v X.XX
~~~~~~~~~~~~~~~~
New: Exercise PEE.T21, eigenvalue proof two ways
New: Exercise VS.T31, alternate proof of Theorem AISM
New: Theorem SIIS, intersection of subspaces
New: Definition SOS, Theorem SSIS, sum of subspaces
New: Exercise S.M40, union of subspaces is not a subspace
New: Theorem SID, dimensions of intersection and sum of subspaces
New: Exercise PD.T60, alternate solution using Theorem SID
New: Theorem ESM, formalizing an eigenvalue discussion
Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
Edit: Theorem EDYES, substantially shorten proof
Edit: Exercise IVLT.T15, streamline solution
Edit: Clarify Example NSE (Katrina Hoefflinger)
Edit: Added missing Sage practice cell in Sage LI (Samuel Gonzalez)
Edit: Theorem PSPHS, proof missing "+" (Katrina Hoefflinger)
Edit: Fine-tune induction proof of Theorem EOMP
Edit: Expanded Example MWIAA
Edit: Solution MR.T80, added one step to proof (Zach Jarvis)
Edit: Definition SUV, harmonize with Definition IM (Nathan Schultz)
Edit: Example SCAD, take more care with "span" (Robert Dwyer)
Edit: Structure five solutions as "iff" proofs (Mira Schoeberlein)
Edit: Simplify Solution ILT.T10
Edit: Definition CM, improve matrix display (Carissa Riedesel)
Edit: Clean-up Exercise VS.M13 (Jasmine Mikesell)
Edit: Expand Solution IVLT.T40
Edit: Improve Definition SIM, Similar Matrices
Change: Streamline second half of the proof of Theorem BS
Change: Exercise VO.T30, define subtraction more carefully (Ken Price)
Change: Theorems SSNS, BNS need case when n = r (Ken Price)
Change: Example NIDAU, in discussion, "are" to "is" (Lukas Karoly)