@@ -24,6 +24,9 @@ use the characteristic polynomial.
 *  Minor adjustment and enhancement of the phrasing of the
 definition of similar matrices.
 
+*  Expand conclusion of Theorem SMEE and improve proof to
+only emply characteristic polynomial for algebraic multiplicities.
+
 
 v X.XX
 ~~~~~~~~~~~~~~~~
@@ -52,6 +55,7 @@ Edit: Definition CM, improve matrix display (Carissa Riedesel)
 Edit: Clean-up Exercise VS.M13 (Jasmine Mikesell)
 Edit: Expand Solution IVLT.T40
 Edit: Improve Definition SIM, Similar Matrices
+Edit: Theorem SMEE, expand conclusion, edit proof
 Change: Streamline second half of the proof of Theorem BS
 Change: Exercise VO.T30, define subtraction more carefully (Ken Price)
 Change: Theorems SSNS, BNS need case when n = r (Ken Price)
